Ensure nothing overlaps the header and footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,7 +67,7 @@ a {
   background-image: url(../../data/img/texture_headfoot.jpg);
   box-shadow: 0 0 1.25rem 1rem rgba(142, 142, 142, 0.4);
   box-shadow: 0 0 1.25rem 0.75rem rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 99;
 
   display: flex;
   flex-direction: row;
